fix: fix flex-wrap

--- a/source/sass/blocks/services.scss
+++ b/source/sass/blocks/services.scss
@@ -56,6 +56,7 @@
   display: flex;
   justify-content: space-between;
   gap: 5px;
+  flex-wrap: wrap;
 
   @include vp-1023 {
     flex-direction: column;
